ICE-7755 , ICE-7331 , ICE-7731 - Synchronized from trunk. Scrolling sizing enhancement and unwrapped dialog script fix.

--- a/icefaces3/branches/icefaces-3.0.x-maintenance/icefaces/ace/component/resources/icefaces.ace/datatable/datatable.css
+++ b/icefaces3/branches/icefaces-3.0.x-maintenance/icefaces/ace/component/resources/icefaces.ace/datatable/datatable.css
@@ -182,7 +182,7 @@
     margin-top:-1px; /* Easy fix for double border in scrollable mode */
 }
 
-.ui-datatable-scrollable .ui-datatable-scrollable-body table,.ui-datatable-scrollable .ui-datatable-scrollable-header table,.ui-datatable-scrollable .ui-datatable-scrollable-footer table {
+.ui-datatable-scrollable .ui-datatable-scrollable-header table,.ui-datatable-scrollable .ui-datatable-scrollable-footer table {
     width:auto;
 }
 
